--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>sobre</title>
-    <link rel="stylesheet" href="css?estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <header><h1>Sobre mim</h1></header>
