--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
             <nav>
                 <a href="index.html">Inicio</a>
                 <a href="sobre.html">sobre</a>
-                <a href="contato">contato</a>
+                <a href="contato.html">contato</a>
             </nav>
             <main>
                 <section>
