--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         <nav>
             <a href="index.html">inicio</a>
-            <a href="sobre">sobre</a>
-            <a href="contato">contato</a>
+            <a href="sobre.html">sobre</a>
+            <a href="contato.html">contato</a>
             </nav>
 
             <main>
