--- a/sobre.html
+++ b/sobre.html
@@ -10,7 +10,7 @@
     <nav>
         <a href="index.html">Inicio</a>
         <a href="sobre.html">Sobre</a>
-        <a href="contato">Contato</a>
+        <a href="contato.html">Contato</a>
     </nav>
     <main>
         <section>
