--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
-        <title>MEU PRIEMIRO SITE</title>
+        <title>MEU PRIMEIRO SITE</title>
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
