--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <section>
                     <h2>GATOS - curiosidades</h2>
                     
-                    <button onclick="mostrarFotoGato()">Mostrar Curiosidade de GATOS</button>
+                    <button onclick="mostrarFatoGato()">Mostrar Curiosidade de GATOS</button>
                     <p id="foto-gato"></p>
 
                     <h2>CACHORROS - TOP 10 MAIS LINDOS</h2>
