--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <h2>GATOS - curiosidades</h2>
                     
                     <button onclick="mostrarFatoGato()">Mostrar Curiosidade de GATOS</button>
-                    <p id="foto-gato"></p>
+                    <p id="fato-gato"></p>
 
                     <h2>CACHORROS - TOP 10 MAIS LINDOS</h2>
                     <button onclick="mostrarImagemCachorro()">Mostrar Imagem de Cachorro></button>
