--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
                         <input type="tel" id="telefoneContato" placeholder="Telefone" required><br>
                         <button type="submit">Enviar</button>
                     </form>
-                    <div id="mensagem-confirmacao">jkjkjkjkjk</div>
+                    <div id="mensagem-confirmacao"></div>
                 </section>
             </main>
             <footer>
